--- a/_posts/2014-04-09-first-bolg.html
+++ b/_posts/2014-04-09-first-bolg.html
@@ -1,6 +1,7 @@
 ---
-layout: default
-title: First Blog
+layout: post
+title: "First"
+date: 2014-04-09 23:55:49
 ---
 <h1>{{page.title}}</h1>
 <p>This is First Blog. For testing. Click the link below to go back to index:</p>
