--- a/_posts/2014-04-09-first-bolg.html
+++ b/_posts/2014-04-09-first-bolg.html
@@ -3,6 +3,5 @@ layout: post
 title: "First"
 date: 2014-04-09 23:55:49
 ---
-<h1>{{page.title}}</h1>
-<p>This is First Blog. For testing. Click the link below to go back to index:</p>
-<a href="{{site.baseurl}}/index.html">Go back</a>
+<p>作为程序员的第一篇日志。For Test</p>
+
