--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: 一只吉
 	<h1>文章列表</h1>
 	<ul class="posts">
 	 {% for post in site.posts %}
-	  <li><span>{{ post.date | data_to_string }}</span> &raquo; <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
+	  <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
 	 {% endfor %}
 	</ul>
 </div>
