update 2048 5*5 and text

--- a/_posts/2014-04-10-game.html
+++ b/_posts/2014-04-10-game.html
@@ -1,11 +1,11 @@
 ---
-title: 苗
+title: 2048修改版：逗苗。
 ---
 <!DOCTYPE html>
 <html>
 <head>
   <meta charset="utf-8">
-  <title>贵圈真乱</title>
+  <title>{{page.title}}</title>
 
   <link href="{{site.baseurl}}/2048/style/main.css" rel="stylesheet" type="text/css">
   <link rel="shortcut icon" href="{{site.baseurl}}/2048/favicon.ico">
@@ -49,11 +49,6 @@ title: 苗
           <div class="grid-cell"></div>
           <div class="grid-cell"></div>
           <div class="grid-cell"></div>
-        </div>
-        <div class="grid-row">
-          <div class="grid-cell"></div>
-          <div class="grid-cell"></div>
-          <div class="grid-cell"></div>
           <div class="grid-cell"></div>
         </div>
         <div class="grid-row">
@@ -61,8 +56,24 @@ title: 苗
           <div class="grid-cell"></div>
           <div class="grid-cell"></div>
           <div class="grid-cell"></div>
+          <div class="grid-cell"></div>
         </div>
         <div class="grid-row">
+          <div class="grid-cell"></div>
+          <div class="grid-cell"></div>
+          <div class="grid-cell"></div>
+          <div class="grid-cell"></div>
+          <div class="grid-cell"></div>
+        </div>
+        <div class="grid-row">
+          <div class="grid-cell"></div>
+          <div class="grid-cell"></div>
+          <div class="grid-cell"></div>
+          <div class="grid-cell"></div>
+          <div class="grid-cell"></div>
+        </div>
+        <div class="grid-row">
+          <div class="grid-cell"></div>
           <div class="grid-cell"></div>
           <div class="grid-cell"></div>
           <div class="grid-cell"></div>
@@ -75,16 +86,12 @@ title: 苗
       </div>
     </div>
 
-    <p class="game-explanation">
-      <strong class="important">How to play:</strong> Use your <strong>arrow keys</strong> to move the tiles. When two tiles with the same number touch, they <strong>merge into one!</strong>
+    <p>
+    <strong class="important">Note:</strong>Modified from<a href="http://git.io/2048">http://git.io/2048.</a> By Orange. Just for Kiding. Thanks Gabriele Cirulli did this great.
     </p>
     <hr>
     <p>
-    <strong class="important">Note:</strong> This site is the official version of 2048. You can play it on your phone via <a href="http://git.io/2048">http://git.io/2048.</a> All other apps or sites are derivatives or fakes, and should be used with caution.
-    </p>
-    <hr>
-    <p>
-    Created by <a href="http://gabrielecirulli.com" target="_blank">Gabriele Cirulli.</a> Based on <a href="https://itunes.apple.com/us/app/1024!/id823499224" target="_blank">1024 by Veewo Studio</a> and conceptually similar to <a href="http://asherv.com/threes/" target="_blank">Threes by Asher Vollmer.</a>
+      免责声明：修改版仅用于圈内人士娱乐，如有侵权，将即刻删除。
     </p>
   </div>
 
