add 2048 return blog index

--- a/_posts/2014-04-10-game.html
+++ b/_posts/2014-04-10-game.html
@@ -32,6 +32,7 @@ title: 2048修改版：逗苗。
     <div class="above-game">
       <p class="game-intro"><strong>你还认得苗字怎么写吗</strong></p>
       <a class="restart-button">来嘛</a>
+      <p class="game_intro"><a href="{{site.baseurl}}">返回Blog首页</a></p>
     </div>
 
     <div class="game-container">
