add mobile support, modify 2048, post a blog

--- a/_posts/2014-04-10-game.html
+++ b/_posts/2014-04-10-game.html
@@ -1,5 +1,5 @@
 ---
-title: 2048修改版：逗苗。
+title: 2048。
 ---
 <!DOCTYPE html>
 <html>
@@ -22,7 +22,7 @@ title: 2048修改版：逗苗。
 <body>
   <div class="container">
     <div class="heading">
-      <h1 class="title">贵圈真乱</h1>
+      <h1 class="title">2048</h1>
       <div class="scores-container">
         <div class="score-container">0</div>
         <div class="best-container">0</div>
@@ -31,11 +31,11 @@ title: 2048修改版：逗苗。
 
     <div class="above-game">
       <p class="game-intro">
-        <strong>你还认得苗字怎么写吗</strong>
+        <strong>只是改开源代码而已</strong>
         <br>
         <a href="{{site.baseurl}}">返回Blog首页</a>
       </p>
-      <a class="restart-button">来嘛</a>
+      <a class="restart-button">再战</a>
     </div>
 
     <div class="game-container">
@@ -43,7 +43,7 @@ title: 2048修改版：逗苗。
         <p></p>
         <div class="lower">
 	        <a class="keep-playing-button">Keep going</a>
-          <a class="retry-button">再来嘛</a>
+          <a class="retry-button">再战</a>
         </div>
       </div>
 
@@ -91,7 +91,7 @@ title: 2048修改版：逗苗。
     </div>
 
     <p>
-    <strong class="important">Note:</strong>Modified from<a href="http://git.io/2048">http://git.io/2048.</a> By Orange. Just for Kiding. Thanks Gabriele Cirulli did this great.
+    <strong class="important">Note:</strong>Modified from<a href="http://git.io/2048">http://git.io/2048.</a> By Orange. Just Kidding. Thanks Gabriele Cirulli did this great.
     </p>
     <hr>
     <p>
