--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: index
 title: 一只吉
 ---
 <div id="main">
@@ -10,4 +10,4 @@ title: 一只吉
 	 {% endfor %}
 	</ul>
 </div>
-<script type="text/javascript" src="/blog/js/rain.js"></script>
+<!-- <script type="text/javascript" src="/blog/js/rain.js"></script> -->
