--- a/_posts/2014-06-15-mobile.html
+++ b/_posts/2014-06-15-mobile.html
@@ -8,6 +8,7 @@ date: 2014-06-15 17:15:00
 <p class="notes">---------------------</p>
 <p>我终于有时间静下心来做这件事情。距离搭通环境，成功写第一篇日志，已经两个月了。我也不知道在忙什么，反正就是觉得忙，觉得累，没什么价值。浑浑噩噩时间就过去了。</p>
 <p>趁周日有时间，做下适配，手机、iPad、PC能自动加载不同的样式了。Android又把侧边栏的动画给我吃掉了，话说在安卓的体验真不好，点击事件还是有300ms的延时，做动画也神烦，我在iPad调试看起来还是不错的。好吧下次再改改优化一下=.=，至于为什么侧边栏下面有个很突兀的home图标，因为这货是用纯CSS画出来的，心血来潮折腾一下。侧边栏的背景是用PS自己抠的，PC上看没有侧边栏，不过很逗比的弄了个下雨的效果，嗯Html5的Canvas，在手机上很卡。于是弄走了。</p>
+<p>另外，保证<span class="red underline">不支持</span>IE6以及奇葩的手机。<span class="blue">做产品做技术，就要有自己的底气。</span></p>
 <p>样式还没定，反正是自己的东西，想改的时候就改了。说不定，会专门弄个邮箱做个脚本来自动发布日志，然后写个文档转Html的工具，然后就能愉快的写博客了。就是喜欢折腾，起码是我想做的。</p>
 <p>最近看了很多杂七杂八的书，下班也不想学习了。也对嘛，今天上班明天才下班的节奏。据说有大神一个月上班300个小时了，我查了下考勤，嗯......</p>
 <p>大家都很辛苦，可是有的时候连一句谢谢也换不回来。大学的时候跟着老大创业没过多久，Android的组长突然离开了，印象中理由是说，觉得没意思？。然后，就找我顶上了。可是我毛也不会啊，拖拖拉拉用了5个月才把第一个项目做完。没意思，好像他们要做的事不是我想做的事。那时又很牛皮，我觉得我的成绩不需要别人来证明，于是从成都实习回来，离开了第一个创业团队，找工作去了。后来听说老大撤掉了移动端所有项目，搞电商去了。现在过得很不错嘛。</p>
@@ -22,9 +23,9 @@ date: 2014-06-15 17:15:00
 <br/>
 <p>"不理智"</p>
 <br/><br/>
-<p>总是活在舆论下。麻痹的，You can you up !</p>
+<p>总是活在舆论下。麻痹的，<span class="line-through red">You can you up !</span></p>
 <p>在世界级待了一年，嗯，成长很快，就像老了几年一样。脾气变大了，有时候真的不爽就直接开喷了。刚来的时候不懂为什么那么多人都牛逼轰轰的，做事爱理不理的…好吧，大家都很无奈。</p>
-<p>勾心斗角也不适合我，大家就不能好好写代码吗，我的代码是我的，我的署名也是我的。他的功劳是他的，他的手残是他的。</p>
+<p>勾心斗角也不适合我，大家就不能好好写代码吗？<span class="red">我的代码是我的，我的署名也是我的。他的工程也是他的，他的功劳是他的。</span></p>
 <br/>
 <p>随便写写，我只是想表达，这个逗比站点终于搭好以及开始写东西了。</p>
 <p>以及，周末真好</p>
