--- a/_posts/2014-06-15-mobile.html
+++ b/_posts/2014-06-15-mobile.html
@@ -1,6 +1,6 @@
 ---
 layout: posts
-title: "自强不息  ————by 吉"
+title: "自强不息   ——by 吉"
 date: 2014-06-15 17:15:00
 ---
 <p class="notes">---------------------</p>
