modify post content

--- a/_posts/2014-06-15-mobile.html
+++ b/_posts/2014-06-15-mobile.html
@@ -25,7 +25,7 @@ date: 2014-06-15 17:15:00
 <br/><br/>
 <p>总是活在舆论下。麻痹的，<span class="line-through red">You can you up !</span></p>
 <p>在世界级待了一年，嗯，成长很快，就像老了几年一样。脾气变大了，有时候真的不爽就直接开喷了。刚来的时候不懂为什么那么多人都牛逼轰轰的，做事爱理不理的…好吧，大家都很无奈。</p>
-<p>勾心斗角也不适合我，大家就不能好好写代码吗？<span class="red">我的代码是我的，我的署名也是我的。他的工程也是他的，他的功劳是他的。</span></p>
+<p>勾心斗角也不适合我，大家就不能好好写代码吗？<span class="red">我的代码是我的，我的署名也是我的。他的工程是他的，他的功劳也是他的。</span></p>
 <br/>
 <p>随便写写，我只是想表达，这个逗比站点终于搭好以及开始写东西了。</p>
 <p>以及，周末真好</p>
