--- a/_posts/2015-02-12-zhi.html
+++ b/_posts/2015-02-12-zhi.html
@@ -9,8 +9,8 @@ title: 2048。
   <meta name="viewport" content="width=device-width,user-scalable=no">
 </head>	
 
-<body>
-	<img src="{{site.baseurl}}/res/20150212/zhi.jpg" style="width=100%;">
-	<h1>明天会更好</h1>
+<body style="padding:0px;margin:0px;">
+	<img src="{{site.baseurl}}/res/20150212/zhi.jpg">
+	<h5>明天会更好</h5>
 </body>
 </html>
