--- a/_posts/2015-02-12-zhi.html
+++ b/_posts/2015-02-12-zhi.html
@@ -1,5 +1,5 @@
 ---
-title: 2048。
+title: 之
 ---
 <!DOCTYPE html>
 <head>
@@ -7,10 +7,22 @@ title: 2048。
   <title>之</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width,user-scalable=no">
+
+  <style type="text/css">
+  	#contentImg{
+  		width: 70%;
+  		margin-left: 2em;
+	}
+
+	#content{
+  		text-indent: 2em;
+	}
+  </style>
 </head>	
 
 <body style="padding:0px;margin:0px;">
-	<img src="{{site.baseurl}}/res/20150212/zhi.jpg">
-	<h5>明天会更好</h5>
+	<img id="contentImg" src="{{site.baseurl}}/res/20150212/zhi.jpg">
+	<br/>
+	<p id="content">明天会更好</p>
 </body>
 </html>
