--- a/_posts/2015-02-12-zhi.html
+++ b/_posts/2015-02-12-zhi.html
@@ -64,8 +64,8 @@
             <div class="m-page m-bigTxt f-hide" data-page-type="bigTxt" data-statics="info_list" style="height: 907px;">
                 <div class="page-con j-txtWrap lazy-finish" data-position="50% 50%" data-size="cover" style="background-image: url({{site.baseurl}}/res/20150212/xizang1.jpg); background-size: cover; background-position: 50% 50%;">
                     <p class="art" style="color: black">2013-5-31</p>
-                    <p class="sub-art">西藏。两个病人。</p>
-                    <p class="sub-art2">很累。很开心。</p>
+                    <p class="sub-art" style="color: black">西藏。两个病人。</p>
+                    <p class="sub-art2" style="color: black">很累。很开心。</p>
                 </div>
             </div>
             <div class="m-page m-bigTxt f-hide" data-page-type="bigTxt" data-statics="info_list" style="height: 907px;">
@@ -175,8 +175,8 @@
             </div>
             <div class="m-page m-bigTxt f-hide" data-page-type="bigTxt" data-statics="info_list" style="height: 907px;">
                 <div class="page-con j-txtWrap lazy-finish" data-position="50% 50%" data-size="cover" style="background-image: url({{site.baseurl}}/res/20150212/zhi2.jpg); background-size: cover; background-position: 50% 50%;">
-                    <p class="art">考虑好了</p>
-                    <p class="sub-art2">我就在楼下</p>
+                    <p class="art" style="color: black">考虑好了</p>
+                    <p class="sub-art2" style="color: black">我就在楼下</p>
                 </div>
             </div>
         </div>
